@startuml
left to right direction
package "taskt.Core.Automation.Commands"{
class "GetDataTableRowCountCommand" <<sealed>> {
+RunCommand() : void 
+v_Result : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ADataTableGetFromDataTableCommands"{
+{abstract} v_Result : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ADataTableInputDataTableCommands"{
+v_DataTable : String <<get>> <<set>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IDataTableGetFromDataTable" {
}
}

package "taskt.Core.Automation.Commands"{
abstract class "ScriptCommand"{
+RunCommand() : void 
+RunCommand() : void 
+GetDisplayValue() : String
+Render() : List
+Render() : List
+AfterShown() : void 
+Refresh() : void 
+BeforeValidate() : void 
+IsValidate() : Boolean
+ConvertToIntermediate() : void 
+ConvertToIntermediate() : void 
+ConvertToRaw() : void 
+ConvertToRaw() : void 
+Clone() : ScriptCommand
+CheckMatched() : Boolean
+Replace() : Boolean
+AddInstance() : void 
+RemoveInstance() : void 
+CommandID : String <<get>> <<set>> 
+CommandName : String <<get>> <<set>> 
+IsCommented : Boolean <<get>> <<set>> 
+SelectionName : String <<get>> <<set>> 
+DefaultPause : Int32 <<get>> <<set>> 
+LineNumber : Int32 <<get>> <<set>> 
+PauseBeforeExeucution : Boolean <<get>> <<set>> 
+DisplayForeColor : Color <<get>> <<set>> 
+v_Comment : String <<get>> <<set>> 
+CommandEnabled : Boolean <<get>> <<set>> 
+IsValid : Boolean <<get>> <<protected set>>
+IsWarning : Boolean <<get>> <<protected set>>
+validationResult : String <<get>> <<protected set>>
+IsMatched : Boolean <<get>> <<protected set>>
+IsDontSavedCommand : Boolean <<get>> <<set>> 
+IsNewInsertedCommand : Boolean <<get>> <<set>> 
+CustomRendering : Boolean <<get>> <<set>> 
+ControlsList : Dictionary <<get>> 
+RenderedControls : List<System.Windows.Forms.Control>
#_ControlsList : Dictionary<string, System.Windows.Forms.Control>
}
}

package "taskt.Core.Automation.Commands"{
Interface "IDataTableProperties" {
+{abstract} v_DataTable : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IResultProperties" {
+{abstract} v_Result : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "IUIParameterProperties" {
+{abstract} ControlsList : Dictionary <<get>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICommandIDProperties" {
+{abstract} CommandID : String <<get>> <<set>> <<abstract>> 
}
}

package "taskt.Core.Automation.Commands"{
Interface "ICanHandleDataTable" {
}
}

package "taskt.Core.Automation.Commands"{
Interface "IExpandableProperties" {
}
}

taskt.Core.Automation.Commands.GetDataTableRowCountCommand --|> taskt.Core.Automation.Commands.ADataTableGetFromDataTableCommands
taskt.Core.Automation.Commands.ADataTableGetFromDataTableCommands --|> taskt.Core.Automation.Commands.ADataTableInputDataTableCommands
taskt.Core.Automation.Commands.ADataTableGetFromDataTableCommands ..|> taskt.Core.Automation.Commands.IDataTableGetFromDataTable
taskt.Core.Automation.Commands.ADataTableInputDataTableCommands --|> taskt.Core.Automation.Commands.ScriptCommand
taskt.Core.Automation.Commands.ADataTableInputDataTableCommands ..|> taskt.Core.Automation.Commands.IDataTableProperties
taskt.Core.Automation.Commands.IDataTableGetFromDataTable --|> taskt.Core.Automation.Commands.IResultProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.IUIParameterProperties
taskt.Core.Automation.Commands.ScriptCommand ..|> taskt.Core.Automation.Commands.ICommandIDProperties
taskt.Core.Automation.Commands.IDataTableProperties --|> taskt.Core.Automation.Commands.ICanHandleDataTable
taskt.Core.Automation.Commands.IDataTableProperties --|> taskt.Core.Automation.Commands.IExpandableProperties
taskt.Core.Automation.Commands.ICanHandleDataTable --|> taskt.Core.Automation.Commands.IExpandableProperties
@enduml